Image Capture: reject setOptions()/applyConstraints() if any argument is unsupported

This CL adds rejection of applyConstraints()/setOptions() if the control value
is out of ranges or unsupported, e.g. trying to set zoom to 1000 where the
capability range is {1.0 - 10.0}.

LayoutTests for each of those methods are added.

BUG=718765

Review-Url: https://codereview.chromium.org/2877273002
Cr-Commit-Position: refs/heads/master@{#472143}

Former-commit-id: 64b5e1fad912daf7c311c7f984db673bcae7713c